# endonav-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
endonav_sim/: __init__.py  anatomy.py  collision.py  dynamics.py  mesh_gen.py  renderer.py  sdf.py  simulator.py  skeleton.py  stones.py  texture.py  tree.py
endonav_sim/perception/: __init__.py  junction.py  place_recognition.py  proximity.py
endonav_sim/shader/: coaxial.frag  coaxial.vert
endonav_sim/sim/: __init__.py  collision.py  skeleton.py
endonav_sim/sim/shader/: postprocess.frag  postprocess.vert
scripts/: bench_sim.py  demo_procedural_sim.py  validate_brightness_falloff.py  validate_flythrough.py  validate_grid.py  validate_junction_detector.py  validate_kinematics.py  validate_perception.py  visualize_skeleton.py
